docker-service.yml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  labels:
    app: customer-service
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: customer-service
---
apiVersion: v1
kind: Service
metadata:
  name: rental-service
  labels:
    app: rental-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: rental-service
---
apiVersion: v1
kind: Service
metadata:
  name: name-service
  labels:
    app: name-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: name-service
